--- a/items.html
+++ b/items.html
@@ -173,46 +173,46 @@
         { name: "Cheese Dosa", price: 75, image: "chess-dosa.jpg" },
         { name: "Chou Chou Bath", price: 70, image: "chou-chou-bath.JPG" }
       ],
-     "Pizza Spot": [
-  { name: "Nuggets", price: 76, image: "Nuggets.jpg" },                    // 60 ≤99 → +16 =76
-  { name: "French Fries", price: 86, image: "French-Fries.jpg" },          // 70 ≤99 → +16 =86
-  { name: "Photo Fries", price: 86, image: "French-Fries.jpg" },           // 70 ≤99 → +16 =86
-  { name: "Masala Fries", price: 96, image: "Masala-Fries.jpg" },          // 80 ≤99 → +16 =96
-  { name: "Smily Fash", price: 96, image: "Smiley-Fries.jpg" },            // 80 ≤99 → +16 =96
-  { name: "Pizza Spot (SPL)", price: 165, image: "Masala-Fries.jpg" }, // 140 ≥100 → +25 =165
+  "Pizza Spot": [
+  { name: "Nuggets", price: 81, image: "Nuggets.jpg" },                    // 60 +21 =81
+  { name: "French Fries", price: 91, image: "French-Fries.jpg" },          // 70 +21 =91
+  { name: "Photo Fries", price: 91, image: "French-Fries.jpg" },           // 70 +21 =91
+  { name: "Masala Fries", price: 101, image: "Masala-Fries.jpg" },         // 80 +21 =101
+  { name: "Smily Fash", price: 101, image: "Smiley-Fries.jpg" },           // 80 +21 =101
+  { name: "Pizza Spot (SPL)", price: 170, image: "Pizza-Spot-Special.jpg" }, // 140 +30 =170
 
-  { name: "Burger Classic", price: 76, image: "Burger-Classic.jpg" },      // 60 ≤99 → +16 =76
-  { name: "Aloo Tikki", price: 76, image: "Aloo-Tikki-Burger.jpg" },       // 60 ≤99 → +16 =76
-  { name: "Paneer", price: 96, image: "Paneer-Burger.jpg" },               // 80 ≤99 → +16 =96
-  { name: "Double Decker", price: 125, image: "Double-Decker-Burger.jpg" }, // 100 ≥100 → +25 =125
-  { name: "Pizza Spot (SPL)", price: 165, image: "Pizza-Spot-Special-Burger.jpg" }, // 140 ≥100 → +25 =165
+  { name: "Burger Classic", price: 81, image: "Burger-Classic.jpg" },      // 60 +21 =81
+  { name: "Aloo Tikki", price: 81, image: "Aloo-Tikki-Burger.jpg" },       // 60 +21 =81
+  { name: "Paneer", price: 101, image: "Paneer-Burger.jpg" },              // 80 +21 =101
+  { name: "Double Decker", price: 130, image: "Double-Decker-Burger.jpg" }, // 100 +30 =130
+  { name: "Pizza Spot (SPL)", price: 170, image: "Pizza-Spot-Special-Burger.jpg" }, // 140 +30 =170
 
-  { name: "Veg. Sandwich", price: 66, image: "Veg-Sandwich.jpg" },         // 50 ≤99 → +16 =66
-  { name: "Cheese", price: 76, image: "Cheese-Sandwich.jpg" },             // 60 ≤99 → +16 =76
-  { name: "Sweet Corn", price: 76, image: "Sweet-Corn-Sandwich.jpg" },     // 60 ≤99 → +16 =76
-  { name: "Mushroom", price: 76, image: "Mushroom-Sandwich.jpg" },         // 60 ≤99 → +16 =76
-  { name: "Paneer", price: 86, image: "Paneer-Tandoori-Sandwich.jpg" },    // 70 ≤99 → +16 =86
-  { name: "Club Sandwich", price: 125, image: "Club-Sandwich.jpg" },       // 100 ≥100 → +25 =125
-  { name: "Pizza Spot (SPL)", price: 145, image: "Pizza-Spot-Special-Sandwich.jpg" }, // 120 ≥100 → +25 =145
+  { name: "Vag. Sandwich", price: 71, image: "Veg-Sandwich.jpg" },         // 50 +21 =71
+  { name: "Cheese", price: 81, image: "Cheese-Sandwich.jpg" },              // 60 +21 =81
+  { name: "Sweet Corn", price: 81, image: "Sweet-Corn-Sandwich.jpg" },      // 60 +21 =81
+  { name: "Mushroom", price: 81, image: "Mushroom-Sandwich.jpg" },          // 60 +21 =81
+  { name: "Paneer", price: 91, image: "Paneer-Tandoori-Sandwich.jpg" },     // 70 +21 =91
+  { name: "Club Sandwich", price: 130, image: "Club-Sandwich.jpg" },        // 100 +30 =130
+  { name: "Pizza Spot (SPL)", price: 150, image: "Pizza-Spot-Special-Sandwich.jpg" }, // 120 +30 =150
 
-  { name: "Margherita", price: 154, image: "Margherita.jpg" },             // 129 ≥100 → +25 =154
-  { name: "Veggie", price: 174, image: "Veggie.jpg" },                     // 149 ≥100 → +25 =174
-  { name: "Vag Lover", price: 274, image: "Veggie-Lover.jpg" },            // 249 ≥100 → +25 =274
-  { name: "Sweet Corn", price: 244, image: "Sweet-Corn.jpg" },             // 219 ≥100 → +25 =244
-  { name: "Baby Corn", price: 224, image: "Baby-Corn.jpg" },               // 199 ≥100 → +25 =224
-  { name: "Tandoori Paneer", price: 235, image: "Tandoori-Paneer.jpg" },   // 210 ≥100 → +25 =235
-  { name: "Pizza Spot (SPL)", price: 324, image: "Pizza-Spot-Special.jpg" }, // 299 ≥100 → +25 =324
+  { name: "Margherita", price: 159, image: "Margherita.jpg" },              // 129 +30 =159
+  { name: "Veggie", price: 179, image: "Veggie.jpg" },                      // 149 +30 =179
+  { name: "Vag Lover", price: 279, image: "Veggie-Lover.jpg" },             // 249 +30 =279
+  { name: "Sweet Corn", price: 249, image: "Sweet-Corn.jpg" },              // 219 +30 =249
+  { name: "Baby Corn", price: 229, image: "Baby-Corn.jpg" },                // 199 +30 =229
+  { name: "Tandoori Paneer", price: 240, image: "Tandoori-Paneer.jpg" },    // 210 +30 =240
+  { name: "Pizza Spot (SPL)", price: 329, image: "Pizza-Spot-Special.jpg" }, // 299 +30 =329
 
-  { name: "Steam momos 2 plates ", price: 139, image: "Steam-Momos.jpg" },                  // 50 ≤99 → +16 =66
-  { name: "Fyr momos", price: 76, image: "Fried-Momos.jpg" },                    // 60 ≤99 → +16 =76
-  { name: "Kurkure momos", price: 96, image: "Kurkure-Momos.jpg" },              // 80 ≤99 → +16 =96
+  { name: "Steam", price: 71, image: "Steam-Momos.jpg" },                   // 50 +21 =71
+  { name: "Fyr", price: 81, image: "Fried-Momos.jpg" },                     // 60 +21 =81
+  { name: "Kurkure", price: 101, image: "Kurkure-Momos.jpg" },              // 80 +21 =101
 
-  { name: "Pav Bhaji", price: 56, image: "Pav-Bhaji.jpg" },                // 40 ≤99 → +16 =56
-  { name: "Cheese Pav Bhaji", price: 76, image: "Cheese-Pav-Bhaji.jpg" },  // 60 ≤99 → +16 =76
+  { name: "Pav Bhaji", price: 61, image: "Pav-Bhaji.jpg" },                 // 40 +21 =61
+  { name: "Cheese Pav Bhaji", price: 81, image: "Cheese-Pav-Bhaji.jpg" },   // 60 +21 =81
 
-  { name: "Veg Rool", price: 66, image: "Veg-Roll.jpg" },                  // 50 ≤99 → +16 =66
-  { name: "Sweet Corn", price: 86, image: "Sweet-Corn-Roll.jpg" },         // 70 ≤99 → +16 =86
-  { name: "Paneer Roll", price: 96, image: "Paneer-Roll.jpg" }             // 80 ≤99 → +16 =96
+  { name: "Veg Rool", price: 71, image: "Veg-Roll.jpg" },                   // 50 +21 =71
+  { name: "Sweet Corn", price: 91, image: "Sweet-Corn-Roll.jpg" },          // 70 +21 =91
+  { name: "Paneer Roll", price: 101, image: "Paneer-Roll.jpg" }             // 80 +21 =101
 ],
       "connect with pizza": [
         { name: "Margharita pizza", price: 155, image: "Margherita.jpg" },
