--- a/items.html
+++ b/items.html
@@ -179,7 +179,7 @@
   { name: "Photo Fries", price: 91, image: "French-Fries.jpg" },           // 70 +21 =91
   { name: "Masala Fries", price: 101, image: "Masala-Fries.jpg" },         // 80 +21 =101
   { name: "Smily Fash", price: 101, image: "Smiley-Fries.jpg" },           // 80 +21 =101
-  { name: "Pizza Spot (SPL)", price: 170, image: "Pizza-Spot-Special.jpg" }, // 140 +30 =170
+  { name: "Pizza Spot (SPL)", price: 170, image: "French-Fries.jpg" },     // 140 +30 =170
 
   { name: "Burger Classic", price: 81, image: "Burger-Classic.jpg" },      // 60 +21 =81
   { name: "Aloo Tikki", price: 81, image: "Aloo-Tikki-Burger.jpg" },       // 60 +21 =81
