--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Checkout | ChatPoint</title>
+  <title>Checkout — ChatPoint</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <style>
@@ -61,13 +61,13 @@
       border-bottom: 1px dashed var(--border);
       font-size: 0.95rem;
     }
-    .delivery-info {
+    .min-order-note {
       text-align: center;
       padding: 0.8rem;
-      margin: 0.8rem 0;
-      background: rgba(0, 255, 157, 0.1);
+      margin: 1rem 0;
+      background: rgba(255, 46, 99, 0.15);
       border-radius: 8px;
-      color: var(--accent);
+      color: #ff6b6b;
       font-weight: 600;
       font-size: 0.95rem;
     }
@@ -105,21 +105,31 @@
     }
     .success { background: #003322; color: var(--accent); border: 1px solid var(--accent); }
     .error { background: #330000; color: #ff6b6b; border: 1px solid #ff4444; }
-    .login-required { text-align: center; padding: 4rem 1rem; color: var(--muted); }
-    .login-required a { color: var(--accent); font-weight: 700; text-decoration: none; }
+    .login-required, .empty-cart {
+      text-align: center;
+      padding: 4rem 1rem;
+      color: var(--muted);
+    }
+    .login-required a, .empty-cart a {
+      color: var(--accent);
+      font-weight: 700;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <div class="container" id="mainContainer"></div>
+  <div class="container" id="mainContainer">
+    <!-- Content will be injected by JavaScript -->
+  </div>
+
   <script>
-    const CART_KEY = "chatpoint_cart";
-    const USER_KEY = "chatpoint_user";
-    const API_BASE = window.location.origin;
+    const MIN_ORDER = 129;
     const PRIMARY = "9632367397";
     const BACKUP = "8088975913";
+    const API_BASE = window.location.origin;
 
     function checkLogin() {
-      const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
+      const user = JSON.parse(localStorage.getItem('chatpoint_user') || 'null');
       if (!user || !user.phone) {
         document.getElementById("mainContainer").innerHTML = `
           <div class="login-required">
@@ -131,44 +141,29 @@
       return user;
     }
 
-    function renderForm(user) {
-      const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
-      if (Object.keys(cart).length === 0) {
+    function renderCheckout(user) {
+      const cart = JSON.parse(localStorage.getItem('cart') || '[]');
+      
+      if (cart.length === 0) {
         document.getElementById("mainContainer").innerHTML = `
-          <div style="text-align:center;padding:4rem;color:#888">
-            <h3>Cart is Empty</h3>
-            <p><a href="index.html" style="color:var(--accent);font-weight:700">Go Shopping</a></p>
+          <div class="empty-cart">
+            <h3>Your cart is empty</h3>
+            <p><a href="index.html">Continue Shopping →</a></p>
           </div>`;
         return;
       }
 
-      let itemsArray = [];
-      let overallTotal = 0;
-      let shopName = "ChatPoint";
+      const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
+      const grandTotal = Math.round(subtotal); // No delivery charge
 
-      for (const shop in cart) {
-        shopName = shop;
-        for (const itemName in cart[shop]) {
-          const item = cart[shop][itemName];
-          if (item.qty > 0) {
-            overallTotal += item.price * item.qty;
-            itemsArray.push({ name: itemName, price: item.price, quantity: item.qty });
-          }
-        }
-      }
+      const canCheckout = subtotal >= MIN_ORDER;
 
-      // Updated rules
-      const FREE_DELIVERY_MIN = 100;
-      const DELIVERY_CHARGE = 12;
-
-      const deliveryCharge = overallTotal >= FREE_DELIVERY_MIN ? 0 : DELIVERY_CHARGE;
-      const grandTotal = overallTotal + deliveryCharge;
-
-      // Calculate how much more needed for free delivery
-      const amountNeeded = FREE_DELIVERY_MIN - overallTotal;
-      const showDeliveryMessage = overallTotal < FREE_DELIVERY_MIN && amountNeeded > 0;
-
-      window.tempOrderData = { itemsArray, overallTotal, deliveryCharge, grandTotal, shopName };
+      let itemsHTML = cart.map(item => `
+        <div class="cart-item">
+          <span>${item.name} × ${item.qty}</span>
+          <span>₹${(item.price * item.qty)}</span>
+        </div>
+      `).join('');
 
       document.getElementById("mainContainer").innerHTML = `
         <h2>Checkout</h2>
@@ -184,119 +179,103 @@
           <input type="tel" id="phone" value="${user.phone || ''}" required />
         </div>
         <div class="form-group">
-          <label>Address Line 1 *</label>
-          <textarea id="address1" rows="3" required placeholder="House no., Building, Street"></textarea>
-        </div>
-        <div class="form-group">
-          <label>Address Line 2 (Optional)</label>
-          <textarea id="address2" rows="2" placeholder="Landmark, Area"></textarea>
+          <label>Full Delivery Address (with landmark) *</label>
+          <textarea id="address" rows="4" required placeholder="House no., Building, Street, Area, Landmark"></textarea>
         </div>
 
         <div class="cart-summary">
           <h3 style="margin-bottom:1rem;color:var(--accent);">Order Summary</h3>
-          ${itemsArray.map(it => `
-            <div class="cart-item">
-              <span>${it.name} × ${it.quantity}</span>
-              <span>₹${(it.price * it.quantity).toFixed(2)}</span>
-            </div>
-          `).join('')}
-          <div class="cart-item"><span>Subtotal</span><span>₹${overallTotal.toFixed(2)}</span></div>
-
-          ${showDeliveryMessage ? `
-            <div class="delivery-info">
-              Add items worth ₹${amountNeeded.toFixed(2)} more to reach ₹${FREE_DELIVERY_MIN} and get <strong>FREE delivery</strong>!
+          ${itemsHTML}
+          <div class="cart-item"><span>Subtotal</span><span>₹${subtotal}</span></div>
+          ${!canCheckout ? `
+            <div class="min-order-note">
+              Add ₹${MIN_ORDER - subtotal} more to reach minimum order of ₹${MIN_ORDER}
             </div>
           ` : ''}
-
-          <div class="cart-item">
-            <span>Delivery</span>
-            <span>${deliveryCharge === 0 ? '<strong style="color:var(--accent)">FREE</strong>' : '₹' + deliveryCharge}</span>
-          </div>
-
           <div class="total-row cart-item">
             <span>Grand Total</span>
-            <span>₹${grandTotal.toFixed(2)}</span>
+            <span>₹${grandTotal}</span>
           </div>
         </div>
 
-        <button id="placeOrderBtn" class="btn">Place Order (Cash on Delivery)</button>
+        <button id="placeOrderBtn" class="btn" ${!canCheckout ? 'disabled' : ''}>
+          Place Order (Cash on Delivery)
+        </button>
       `;
 
-      document.getElementById("placeOrderBtn").onclick = placeOrder;
+      if (canCheckout) {
+        document.getElementById("placeOrderBtn").onclick = placeOrder;
+      }
     }
 
     async function placeOrder() {
       const name = document.getElementById("name").value.trim();
       const phone = document.getElementById("phone").value.trim();
-      const address1 = document.getElementById("address1").value.trim();
-      const address2 = document.getElementById("address2").value.trim();
+      const address = document.getElementById("address").value.trim();
 
-      if (!name || !phone || !address1) {
+      if (!name || !phone || !address) {
         showError("Please fill all required fields.");
         return;
       }
 
-      const { itemsArray, grandTotal, shopName } = window.tempOrderData;
-      const user = JSON.parse(localStorage.getItem(USER_KEY));
+      const cart = JSON.parse(localStorage.getItem('cart') || '[]');
+      const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
+      const grandTotal = Math.round(subtotal);
 
-      let userId = null;
-      if (user && user._id && /^[a-f0-9]{24}$/i.test(user._id)) {
-        userId = user._id;
+      if (subtotal < MIN_ORDER) {
+        showError(`Minimum order amount is ₹${MIN_ORDER}`);
+        return;
       }
 
-      const cart = { [shopName]: {} };
-      itemsArray.forEach(item => {
-        cart[shopName][item.name] = { qty: item.quantity, price: item.price };
+      const user = JSON.parse(localStorage.getItem('chatpoint_user'));
+      const cartObj = { "ChatPoint": {} };
+      cart.forEach(item => {
+        cartObj["ChatPoint"][item.name] = { price: item.price, qty: item.qty };
       });
 
       const orderData = {
-        userId,
         name,
         phone,
-        address1,
-        address2: address2 || "",
+        address1: address,
         grandTotal,
-        cart
+        cart: cartObj,
+        userId: user?._id || null,
+        customer_name: user?.name || name,
+        customer_phone: user?.phone || phone
       };
-
-      console.log("Sending order:", orderData);
 
       const btn = document.getElementById("placeOrderBtn");
       btn.disabled = true;
       btn.innerHTML = "Placing Order...";
 
       try {
-        const res = await fetch(`${API_BASE}/api/save-order`, {
+        const res = await fetch(`${API_BASE}/api/order`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(orderData)
         });
         const data = await res.json();
-        console.log("Response:", data);
 
-        if (res.ok && data.success) {
-          showSuccess("Order Placed Successfully! 🎉");
-          localStorage.removeItem(CART_KEY);
+        if (data.success) {
+          showSuccess("Order placed successfully! 🎉");
+          localStorage.removeItem('cart');
 
-          const itemsList = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
-          const message = `New Order!\n\n${itemsList}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? '\n' + address2 : ''}\nTotal: ₹${grandTotal}\n\nPlease confirm soon!`;
+          const itemsList = cart.map(i => `${i.name} × ${i.qty}`).join("\n");
+          const message = `New Order!\n\n${itemsList}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address}\nTotal: ₹${grandTotal}\n\nPlease confirm soon!`;
           const encoded = encodeURIComponent(message);
 
           setTimeout(() => window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, '_blank'), 1000);
           setTimeout(() => window.open(`https://wa.me/91${BACKUP}?text=${encoded}`, '_blank'), 2000);
-
-          setTimeout(() => {
-            window.location.href = "tracking.html";
-          }, 3000);
+          setTimeout(() => window.location.href = "tracking.html", 3000);
         } else {
-          throw new Error(data.message || "Server error");
+          throw new Error(data.message || "Order failed");
         }
       } catch (err) {
-        console.error("Order failed:", err);
-        showError("Failed to save online. Sending via WhatsApp...");
+        console.error(err);
+        showError("Network error. Trying WhatsApp fallback...");
 
-        const itemsList = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
-        const fallbackMsg = `(Online Failed)\nNew Order\n\n${itemsList}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? '\n' + address2 : ''}\nTotal: ₹${grandTotal}`;
+        const itemsList = cart.map(i => `${i.name} × ${i.qty}`).join("\n");
+        const fallbackMsg = `(Online Failed)\nNew Order\n\n${itemsList}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address}\nTotal: ₹${grandTotal}`;
         const encoded = encodeURIComponent(fallbackMsg);
         window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, '_blank');
       }
@@ -321,7 +300,7 @@
 
     window.onload = () => {
       const user = checkLogin();
-      if (user) renderForm(user);
+      if (user) renderCheckout(user);
     };
   </script>
 </body>
