--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     .brand span{color:#ffe500; font-weight:900}
     .header-right{margin-left:auto;display:flex;gap:8px;align-items:center}
 
-    /* New Orders Button */
+    /* NEW: My Orders Button */
     .orders-btn{
       background:linear-gradient(135deg, #ff8f00, #ff6d00);
       color:white;
